# ezy-db

./: Cargo.toml
src/: config.rs  endpoints.rs  main.rs
src/db/: ezytype.rs  mod.rs
