[package]
name = "ezydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Example, use the version numbers you need
tide = "0.16.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"